# PyAppleTree

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pyroot_test.py  setup.py
PyRoot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
appletree/: __init__.py  __main__.py  analyze.py  config.py  utils.py
appletree/analyze/: analyze.py  metrics.py  report.py  run.py
appletree/locales/: __init__.py
appletree/locales/ko/: __init__.py  analyze.py  main.py
docs/: conf.py  index.md  requirements.txt
docs/en/: .readthedocs.yaml  conf.py  index.md
docs/ko/: .readthedocs.yaml  conf.py  index.md
docs/ko/api/cli/: analyze.md
docs/ko/future/: future.md
docs/ko/help/: issue.md
docs/ko/start/: learn.md  quickstart.md
docs/ko/update/: changelog.md
docs/ko/update/whatsnew/: 1.0.0.md
pyroot/: __init__.py  __main__.py  config.py  utils.py
pyroot/analyze/: __init__.py  analyze.py  metrics.py  report.py  run.py
test/: a.py  b.py  c.py  data.txt  dl.py  error_report.txt  old_run.py  plan.md  pyappletree_test.bat  pyappletree_test.py  readme_badge_test.md
test/old_analyze/: analyze.py  metrics.py  report.py  run.py
