[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyAppleTree"
version = "1.0.0a0.dev8"
description = "Python Runtime Overall Operating Toolkit / Analyze, Prepare, Profile, Log, Explain"
readme = "README.md"
license = "MIT"
requires-python = ">=3.15"
authors = [
    { name = "seanleeee13" }
]
dependencies = []
classifiers = [
    "Environment :: Console",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.15",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/seanleeee13/PyAppleTree"
Issues = "https://github.com/seanleeee13/PyAppleTree/issues"
Changelog = "https://pyappletree.readthedocs.io/ko/latest/update/changelog.html"
Documentation = "https://pyappletree.readthedocs.io/en/latest"

[project.scripts]
pyappletree = "appletree.__main__:main"
appletree = "appletree.__main__:main"

[tool.setuptools]
packages = ["appletree"]